--- a/p8105_hw5_ltc2121.Rmd
+++ b/p8105_hw5_ltc2121.Rmd
@@ -5,7 +5,7 @@ output: github_document
 
 ```{r, include = FALSE, message=FALSE, warning=FALSE}
 library(tidyverse)
-library(rvest)
+library(p8105.datasets)
 
 knitr::opts_chunk$set(
 	echo = TRUE,
@@ -27,4 +27,102 @@ scale_fill_discrete = scale_fill_viridis_d
 ```
 
 ## Problem 1
+
+Data import and manipulation 
+
+```{r}
+full_df = 
+  tibble(
+    files = list.files("data/"),
+    path = str_c("data/", files)
+  ) %>% 
+  mutate(data = map(path, read_csv)) %>% 
+  unnest()
+```
+
+Tidy data
+
+```{r}
+tidy_df = 
+  full_df %>% 
+  mutate(
+    files = str_replace(files, ".csv", ""),
+    group = str_sub(files, 1, 3)) %>% 
+  pivot_longer(
+    week_1:week_8,
+    names_to = "week",
+    values_to = "outcome",
+    names_prefix = "week_") %>% 
+  mutate(week = as.numeric(week)) %>% 
+  select(group, subj = files, week, outcome)
+```
+
+Plot of observations over time 
+
+```{r}
+tidy_df %>% 
+  ggplot(aes(x = week, y = outcome, group = subj, color = group)) + 
+  geom_point() + 
+  geom_path() + 
+  facet_grid(~group)
+```
+
+This plot suggests high within-subject correlation -- subjects who start above average end up above average, and those that start below average end up below average. Subjects in the control group generally don't change over time, but those in the experiment group increase their outcome in a roughly linear way. 
+## Problem 2
+
+Import raw data and exploration
+
+```{r}
+raw_washp = 
+  read_csv("data/homicide-data.csv") %>% 
+  mutate(
+    city_state = str_c(city, state, sep = ", ")) 
+
+hom_df = raw_washp %>% 
+  group_by(city_state) %>% 
+  summarise(total_hom = n(), 
+            unsolved_hom = sum(disposition %in% c("Closed without arrest", "Open/No arrest"))) 
+
+
+```
+
+This dataframe contains `r nrow(raw_washp)` rows and `r ncol(raw_washp)` columns. Each row represents an individual criminal homicide. The data includes information from `r raw_washp %>% select(city_state) %>% distinct %>% count` cities across the United States. The reported dates of cases range from `r min(raw_washp$reported_date)` to `r max(raw_washp$reported_date)`. The other key variables include details on victim name, age, race and sex. 
+
+Making a Baltimore dataframe & prop.test 
+```{r}
+balti_df = hom_df %>% 
+  filter(city_state == "Baltimore, MD")
+
+test_res = prop.test(
+    x = balti_df %>% pull(unsolved_hom),
+    n = balti_df %>% pull(total_hom),
+    alternative = c("two.sided"),
+    conf.level = 0.95, correct = TRUE)
+
+test_res = test_res %>% 
+  broom::tidy() 
+
+
+mean_and_sd = function(x) {
+  
+  if (!is.numeric(x)) {
+    stop("Z scores only work for numbers")
+  }
+  
+  if (length(x) < 3) {
+    stop("Z scores really only work if you have three or more numbers")
+  }
+  
+  mean_x = mean(x)
+  sd_x = sd(x)
+  
+  tibble(
+    mean = mean_x,
+    sd = sd_x
+  )
+  
+}
+  
+
+```
 
