--- a/p8105_hw5_ltc2121.md
+++ b/p8105_hw5_ltc2121.md
@@ -359,3 +359,72 @@ ggplot() +
 ```
 
 <img src="p8105_hw5_ltc2121_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
+
+## Problem 3
+
+Making t.test function and testing function
+
+``` r
+sim_ttest = function(mu) {
+  
+  x = rnorm(n = 30, mean = mu, sd = 5)
+
+  test_results = t.test(x)
+  
+  test_results %>% 
+    broom::tidy() %>% 
+    select(estimate, p.value)
+  
+}
+
+sim_ttest(mu = 0)
+```
+
+    ## # A tibble: 1 × 2
+    ##   estimate p.value
+    ##      <dbl>   <dbl>
+    ## 1    0.607   0.485
+
+Simulation 1: mu = 0 for 5000 iterations
+
+``` r
+sim_res_df_1 = 
+  expand_grid(
+    true_mean = 0,
+    iteration = 1:5000  
+  ) %>% 
+  mutate(
+    estimate_df = map(true_mean, sim_ttest)
+  ) 
+
+sim_res_df_1 %>% 
+  unnest(estimate_df)
+```
+
+    ## # A tibble: 5,000 × 4
+    ##    true_mean iteration estimate p.value
+    ##        <dbl>     <int>    <dbl>   <dbl>
+    ##  1         0         1  -0.934   0.381 
+    ##  2         0         2  -0.0514  0.954 
+    ##  3         0         3   0.780   0.516 
+    ##  4         0         4   0.715   0.332 
+    ##  5         0         5  -0.230   0.825 
+    ##  6         0         6  -0.248   0.761 
+    ##  7         0         7   0.662   0.484 
+    ##  8         0         8   0.645   0.492 
+    ##  9         0         9  -0.984   0.205 
+    ## 10         0        10  -1.40    0.0307
+    ## # … with 4,990 more rows
+
+Simulation 2: mu = {1,2,3,4,5,6} for 5000 iterations
+
+``` r
+sim_res_df_2 = 
+  expand_grid(
+    true_mean = c(1, 2, 3, 4, 5, 6),
+    iteration = 1:5000  
+  ) %>% 
+  mutate(
+    estimate_df = map(true_mean, sim_ttest)
+  ) 
+```
