--- a/p8105_hw5_ltc2121.md
+++ b/p8105_hw5_ltc2121.md
@@ -274,14 +274,9 @@ hom_df %>%
 | Tulsa, OK          |       584 |          193 |
 | Washington, DC     |      1345 |          589 |
 
-``` r
-##############sig fig issue in the inline code ##################
-```
-
 This dataframe contains 52179 rows and 13 columns. Each row represents
 an individual criminal homicide. The data includes information from 50
-cities across the United States. The reported dates of cases range from
-2.0070101^{7} to 2.015111^{8}. The other key variables include details
+cities across the United States. The other key variables include details
 on victim name, age, race and sex. Another important notice about the
 dataframe was that the city Tulsa had been incorrectly matched with the
 state AK and needed to be corrected to be matched to the state OK.
@@ -383,7 +378,7 @@ sim_ttest(mu = 0)
     ## # A tibble: 1 × 2
     ##   estimate p.value
     ##      <dbl>   <dbl>
-    ## 1    0.607   0.485
+    ## 1   0.0539   0.960
 
 Simulation 1: mu = 0 for 5000 iterations
 
@@ -398,23 +393,9 @@ sim_res_df_1 =
   ) 
 
 sim_res_df_1 %>% 
-  unnest(estimate_df)
+  unnest(estimate_df) %>% 
+  view()
 ```
-
-    ## # A tibble: 5,000 × 4
-    ##    true_mean iteration estimate p.value
-    ##        <dbl>     <int>    <dbl>   <dbl>
-    ##  1         0         1  -0.934   0.381 
-    ##  2         0         2  -0.0514  0.954 
-    ##  3         0         3   0.780   0.516 
-    ##  4         0         4   0.715   0.332 
-    ##  5         0         5  -0.230   0.825 
-    ##  6         0         6  -0.248   0.761 
-    ##  7         0         7   0.662   0.484 
-    ##  8         0         8   0.645   0.492 
-    ##  9         0         9  -0.984   0.205 
-    ## 10         0        10  -1.40    0.0307
-    ## # … with 4,990 more rows
 
 Simulation 2: mu = {1,2,3,4,5,6} for 5000 iterations
 
@@ -428,3 +409,96 @@ sim_res_df_2 =
     estimate_df = map(true_mean, sim_ttest)
   ) 
 ```
+
+First plot
+
+``` r
+plot_1 = 
+  sim_res_df_2 %>% 
+  unnest(estimate_df) %>%
+  mutate(null = if_else(p.value < 0.05, "reject", 
+                        if_else(p.value >= 0.05, "not_reject", NA_character_))) %>% 
+  group_by(true_mean, null) %>%
+  summarise(n = n()) %>%
+  mutate(prop = n / sum(n)) %>% 
+  filter(null == "reject") %>% 
+  ggplot(aes(x = true_mean, y = prop)) +
+  geom_bar(stat = "identity", aes( fill = true_mean)) + 
+    labs(
+    x = "Value of True Mean", 
+    y = "Proportion", 
+    title = "Proportion of Occurances with Rejected Null Hypothesis") +
+  theme(legend.position = "none") +
+  scale_x_continuous(breaks = c(1, 2, 3, 4, 5, 6))
+```
+
+    ## `summarise()` has grouped output by 'true_mean'. You can override using the
+    ## `.groups` argument.
+
+``` r
+plot_1
+```
+
+<img src="p8105_hw5_ltc2121_files/figure-gfm/unnamed-chunk-13-1.png" width="90%" />
+
+There is a relationship shown between effect size and power in the graph
+that compares the proportion of times that the null hypothesis was
+rejected between different true mean values. This when mu is increasing
+while the standard deviation remains unchanged, the effect size is
+increasing. Statistical power is defines as the probability to correctly
+reject the null and relies on sample size and effect size. Therefore, an
+increase in effect size will result in an increase in power. This shown
+through the increased proportion of times that the null hypothesis was
+rejected as true mean values increase.
+
+Second Plot
+
+``` r
+df1_plot_2 = 
+  sim_res_df_2 %>% 
+  unnest(estimate_df) %>%
+  mutate(null = if_else(p.value < 0.05, "reject", 
+                        if_else(p.value >= 0.05, "not_reject", NA_character_))) %>% 
+  group_by(true_mean) %>%
+  summarise(mean_mu = mean(estimate)) 
+
+df2_plot_2 = 
+  sim_res_df_2 %>% 
+  unnest(estimate_df) %>%
+  mutate(null = if_else(p.value < 0.05, "reject", 
+                        if_else(p.value >= 0.05, "not_reject", NA_character_))) %>% 
+  group_by(true_mean, null) %>%
+  summarise(mean_mu = mean(estimate)) %>%
+  filter(null == "reject") 
+```
+
+    ## `summarise()` has grouped output by 'true_mean'. You can override using the
+    ## `.groups` argument.
+
+``` r
+plot_2 = 
+  ggplot() +
+  geom_point(df1_plot_2, mapping = aes(x = true_mean, y = mean_mu, color = "blue")) +
+  geom_point(df2_plot_2, mapping = aes(x = true_mean, y = mean_mu, color = "orange")) + 
+  labs(
+    x = "Value of True Mean", 
+    y = "Average Estimate", 
+    title = "Average Estimates of Mu hat for True Mean", 
+    color = "Null Hypothesis Test Results") +
+  scale_color_hue(labels = c("Both", "Only Reject")) +
+  scale_x_continuous(breaks = c(1, 2, 3, 4, 5, 6)) +
+  scale_y_continuous(breaks = c(1, 2, 3, 4, 5, 6))
+
+plot_2
+```
+
+<img src="p8105_hw5_ltc2121_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
+
+This graph overlays all sample averages with the sample averages of
+across tests for which the null is rejected for each true mean. It is
+shown that the sample averages of across tests for which the null is
+rejected is not equal to the true mean for lower true mean values. This
+is because the lower true mean tests had a lower power associated with
+the estimate results. Therefore the estimates that resulted in a
+rejection of the null hypothesis from these test were notably different
+from the true mean value.
